cluster/users-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: users
spec:
  hosts:
    - users
  # This is an internal service, so is not announced to the gateway.
  # With no "gateways" field, the default applies: Make this service
  # known internally to every other service.
  http:
    - match:
        - uri:
            prefix: /api/v1/users
      rewrite:
        uri: /api/v1/users
      route:
        - destination:
            host: users
            port:
              number: 30000
